update test/index.html with bower

--- a/test/index.html
+++ b/test/index.html
@@ -2,5 +2,8 @@
 <meta charset="utf-8">
 <title>title</title>
 
+
+<script src="../bower_components/obtain-unicode/obtain-unicode.js"></script>
+<script src="../bower_components/utf8-encoding/utf8-encoding.js"></script>
 <script src="../urlsearchparams.js"></script>
 <script src="test.js"></script>
